# px4_ros2_sdk_sitl

./: .gitignore  compile_control.sh  json_command.md  px4_control.sh  px4_multi.sh  readme.md
src/: readme.md
src/Micro-XRCE-DDS-Agent/: uxrce_dds_run.sh
src/multi_offboard/: CMakeLists.txt  package.xml
src/multi_offboard/src/: multi_offboard.cpp
src/px4_arucoland/src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp
src/px4_arucoland/src/aruco_tracker/cfg/: params.yaml
src/px4_arucoland/src/precision_land/: PrecisionLand.cpp  PrecisionLand.hpp
src/px4_arucoland/src/precision_land/cfg/: params.yaml
src/px4_arucoland/src/precision_land/launch/: precision_landing_system.launch.py
src/px4_control/: CMakeLists.txt  README.md  package.xml
src/px4_control/examples/: example_mission.json
src/px4_control/include/px4_control/: px4_control.hpp  px4_estimator.hpp  px4_home_controller.hpp  px4_servo_controller.hpp
src/px4_control/include/px4_joystick/: joystick_bridge.hpp  px4_joystick.hpp
src/px4_control/include/px4_mission/: px4_mission.hpp
src/px4_control/launch/: px4_control.launch.py  px4_estimator.launch.py  px4_home_controller.launch.py  px4_joystick.launch.py  px4_mission.launch.py  px4_servo_controller.launch.py
src/px4_control/scripts/: mavlink_mission.py  px4_control_cli.py  px4_mission_cli.py
src/px4_control/sh/: px4_control.sh
src/px4_control/src/: px4_control.cpp  px4_control_node.cpp  px4_estimator.cpp  px4_estimator_node.cpp  px4_home_controller.cpp  px4_servo_controller.cpp  px4_servo_controller_node.cpp
src/px4_control/utils/: joystick_bridge.cpp  px4_joystick.cpp  px4_mission.cpp  px4_mission_node.cpp
src/px4_mqtt/: CMakeLists.txt  README.md  package.xml
src/px4_mqtt/config/: mqtt_control.yaml  mqtt_estimator.yaml  mqtt_home_control.yaml  mqtt_mission.yaml  mqtt_servo_control.yaml
src/px4_mqtt/include/: mqtt_home_control.hpp  mqtt_servo_control.hpp
src/px4_mqtt/include/px4_mqtt/: mqtt_control.hpp  mqtt_estimator.hpp  mqtt_mission.hpp  mqtt_servo_control.hpp
src/px4_mqtt/launch/: mqtt_control.launch.py  mqtt_estimator.launch.py  mqtt_home_control.launch.py  mqtt_mission.launch.py  mqtt_servo_control.launch.py
src/px4_mqtt/src/: mqtt_control.cpp  mqtt_estimator.cpp  mqtt_home_control.cpp  mqtt_mission.cpp  mqtt_servo_control.cpp
src/px4_target_track/src/target_tracker_planner/: CMakeLists.txt  package.xml
src/px4_target_track/src/target_tracker_planner/cfg/: params.yaml
src/px4_target_track/src/target_tracker_planner/include/target_tracker_planner/: target_tracker_planner.hpp
src/px4_target_track/src/target_tracker_planner/launch/: target_tracker_planner.launch.py  yolov8_tracking.launch.py
src/px4_target_track/src/target_tracker_planner/src/: target_tracker_planner_node.cpp
src/px4_target_track/src/yolov8_detector/: CHECKLIST.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  README_TRACKING.md  package.xml  verify_changes.sh
src/px4_target_track/src/yolov8_detector/cfg/: params.yaml
src/px4_target_track/src/yolov8_detector/include/yolov8_detector/: YOLOv8Detector.hpp
src/px4_target_track/src/yolov8_detector/launch/: yolov8_detector.launch.py
src/px4_target_track/src/yolov8_detector/src/: YOLOv8Detector.cpp  yolov8_detector_node.cpp
src/uav_first_order_controller/: CMakeLists.txt  package.xml
src/uav_first_order_controller/launch/: multi_uav_launch.py
src/uav_first_order_controller/src/: uav1_controller.cpp  uav2_controller.cpp  uav3_controller.cpp  uav4_controller.cpp  uav5_controller.cpp  uav6_controller.cpp
